Murphy System/archive/artifacts/outputs/workspace_output_1769731256_6375.txt
  File "<string>", line 1
    (✓ if v else ✗)
     ^
SyntaxError: invalid character '✓' (U+2713)
